ssh-scp/monitoring/monitoring-qa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-qa-grafana
  namespace: monitoring-qa
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
   # appgw.ingress.kubernetes.io/backend-protocol: "https"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
spec:
  tls:
    - secretName: my-tls-secret
  rules:
  - host: qa-monitoring.prescinto.ai
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-qa
            port:
              number: 80
